Updated Icons and Links for social. Updated Summary updated TS&CC

--- a/index.html
+++ b/index.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Wade Chewning</title>
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/a033fd16bd.js" crossorigin="anonymous"></script>
+
+
 </head>
+
 <body>
     <header>
         <h1>Wade Chewning</h1>
         <p>Washington, DC, 20036 | (540) 903-3108 | chewningwade@gmail.com</p>
+
+        <a href="https://https://github.com/NeverRetail" i class="fa-brands fa-github fa-2xl"
+            style="color: white;"></i></a>
+        <a href="https://www.linkedin.com/in/wade-chewning-8b8a0b88/" i class="fa-brands fa-linkedin fa-2xl"
+            style="color: white;"></i></a>
+        <a href="" i class="fa-solid fa-blog fa-2xl" style="color: white;"></i></a>
+        <!-- <a href="www.github.com" i class="fa-brands fa-youtube fa-2xl" style="color: white;"></i></a> -->
     </header>
 
     <section>
         <div class="section-title">Summary</div>
-        <p>Dynamic IT professional with expertise in systems administration, risk management, and process optimization. Proficient in PowerShell scripting for automation, ensuring compliance with industry standards such as CIS8, and implementing robust security measures to safeguard sensitive data. Experienced in managing data center infrastructure, including HVAC and electrical systems, to maximize uptime and efficiency. Skilled in troubleshooting and providing live support for both Windows and Linux environments, with a commitment to delivering exceptional customer service. Proven ability to lead teams, deploy solutions to complex challenges, and drive performance improvement initiatives.</p>
+        <p><p>Dynamic Cloud Engineer with expertise in cloud architecture, systems administration, and automation. Proficient in designing and managing scalable cloud solutions primarily on Azure, with additional experience in AWS and GCP. Skilled in PowerShell scripting and automation, ensuring compliance with industry standards, and implementing robust security measures to safeguard sensitive data. Experienced in optimizing cloud infrastructure for maximum uptime and efficiency, and in deploying and managing containerized applications using Docker and Kubernetes. Strong background in troubleshooting and providing support for both Windows and Linux environments. Committed to delivering exceptional customer service, leading teams, and driving performance improvement initiatives through innovative cloud-based solutions.</p>
+    </p>
     </section>
 
     <section>
         <div class="section-title">Technical Skills & Core Competencies</div>
         <ul>
-            <li>Information & Technology</li>
+            <li>Cloud Computing Solutions: Extensive experience in designing, deploying, and managing cloud
+                infrastructure with a primary focus on Azure, as well as proficiency in AWS and GCP.</li>
+            <li>Distributed Systems: Expertise in building and managing distributed systems and applications.</li>
+            <li>Cloud Architecture: Designing scalable, secure, and cost-effective cloud solutions.</li>
+            <li>DevOps Practices: Proficiency in CI/CD pipelines, infrastructure as code (IaC), and automated
+                deployments using tools like Azure DevOps, Terraform, and Jenkins.</li>
+            <li>Containerization & Orchestration: Experience with Docker and Kubernetes for container management and
+                orchestration.</li>
+            <li>Security & Compliance: Ensuring cloud security best practices and compliance with industry standards.
+            </li>
+            <li>Networking: Knowledge of cloud networking, VPC, VPN, DNS, load balancing, and network security.</li>
+            <li>Database Management: Experience with cloud-based databases such as Azure SQL, Amazon RDS, and Google
+                Cloud SQL.</li>
+            <li>Monitoring & Logging: Implementing and managing monitoring, logging, and alerting solutions using tools
+                like Azure Monitor, AWS CloudWatch, and Google Stackdriver.</li>
+            <li>Scripting & Automation: Proficiency in scripting languages like PowerShell, Bash, and Python for
+                automation and task management.</li>
+            <li>System Administration: Managing and maintaining various operating systems including Microsoft Windows,
+                Mac OS, and Linux (Ubuntu, Mint, Fedora).</li>
+            <li>Technical Support & Troubleshooting: Providing high-level technical support and troubleshooting for
+                hardware and software issues.</li>
+            <li>Project Management: Strong skills in strategic and analytical planning, managing cloud projects from
+                conception to deployment.</li>
+            <li>Exceptional Communication Skills: Excellent communication and customer service abilities to interact
+                with stakeholders and team members effectively.</li>
+            <li>Technological Solutions: Creating and implementing innovative technological solutions to meet business
+                requirements.</li>
+            <li>Data Analysis & Management: Intensive data analysis, management, and application design.</li>
+            <li>Hardware Support: Knowledge in supporting and maintaining IT hardware.</li>
+            <li>Networking Protocols: Understanding of network cabling, HTTP, DNS, and TLS.</li>
+
+            <!--- <li>Information & Technology</li>
             <li>Assurance Team Management</li>
             <li>Exceptional Communication Skills & Customer Service</li>
             <li>Help Desk Support Management</li>
@@ -36,8 +80,8 @@
             <li>Microsoft Windows, Mac OS, Linux</li>
             <li>Cloud, SQL, Ubuntu, Mint, Fedora, MaaS360</li>
             <li>Network Cabling (Cat5E Cat6), HTTP, DNS, TLS</li>
-            <li>AWS, Azure, GCP</li>
-            
+            <li>AWS, Azure, GCP</li> --->
+
         </ul>
     </section>
 
@@ -46,44 +90,76 @@
 
         <h3>Systems Engineer | TSI VA (EJF Capital LLC), Arlington, VA | March 2023 – Present</h3>
         <ul>
-            <li>Lead the development of PowerShell scripts aimed at streamlining daily operations, such as automating Sysmon updates for end-users, dispatching reboot notifications, and conducting regular checks on user memberships within security and distribution groups.</li>
-            <li>Facilitate collaboration with Risk Assessment vendors regularly, leading to a systematic reduction in the company's risk score week after week.</li>
-            <li>Ensure consistent adherence to patch management protocols, keeping both end-users and servers updated with the latest patches in accordance with Microsoft's "Patch Tuesday" schedule, whether on a weekly or monthly basis.</li>
-            <li>Take measures to manage the company's CIS8 compliance, ensuring regulatory adherence through necessary adjustments and modifications.</li>
-            <li>Design and implement comprehensive email rules and policies within the admin exchange center and Mimecast, effectively safeguarding sensitive internal data against external breaches and notably decreasing the volume of spam received by users.</li>
+            <li>Lead the development of PowerShell scripts aimed at streamlining daily operations, such as automating
+                Sysmon updates for end-users, dispatching reboot notifications, and conducting regular checks on user
+                memberships within security and distribution groups.</li>
+            <li>Facilitate collaboration with Risk Assessment vendors regularly, leading to a systematic reduction in
+                the company's risk score week after week.</li>
+            <li>Ensure consistent adherence to patch management protocols, keeping both end-users and servers updated
+                with the latest patches in accordance with Microsoft's "Patch Tuesday" schedule, whether on a weekly or
+                monthly basis.</li>
+            <li>Take measures to manage the company's CIS8 compliance, ensuring regulatory adherence through necessary
+                adjustments and modifications.</li>
+            <li>Design and implement comprehensive email rules and policies within the admin exchange center and
+                Mimecast, effectively safeguarding sensitive internal data against external breaches and notably
+                decreasing the volume of spam received by users.</li>
         </ul>
 
-        <h3>Facility Operations Center Support Engineer II | AMAZON WEB SERVICES (AWS), Sterling, VA | June 2018 – April 2022</h3>
+        <h3>Facility Operations Center Support Engineer II | AMAZON WEB SERVICES (AWS), Sterling, VA | June 2018 – April
+            2022</h3>
         <ul>
-            <li>Monitored the global data center and Amazon facilities infrastructure platform, ensuring the smooth operation of various computer equipment.</li>
-            <li>Maximized online system availability, automated processes, and managed tasks efficiently in a 24/7 environment.</li>
-            <li>Managed HVAC, electrical/energy, airflow, and fire/safety systems to uphold equipment efficiencies and reliability.</li>
-            <li>Completed all necessary reports, logs, and records to accurately document equipment and systems, promptly reporting equipment failures.</li>
-            <li>Assisted in developing external and internal communications and coordinated emergency recovery efforts, escalating matters requiring advanced solutions or guidance in virtualization.</li>
-            <li>Conducted highly complex and technical special assignments, devising alternative strategies to accomplish specific objectives.</li>
+            <li>Monitored the global data center and Amazon facilities infrastructure platform, ensuring the smooth
+                operation of various computer equipment.</li>
+            <li>Maximized online system availability, automated processes, and managed tasks efficiently in a 24/7
+                environment.</li>
+            <li>Managed HVAC, electrical/energy, airflow, and fire/safety systems to uphold equipment efficiencies and
+                reliability.</li>
+            <li>Completed all necessary reports, logs, and records to accurately document equipment and systems,
+                promptly reporting equipment failures.</li>
+            <li>Assisted in developing external and internal communications and coordinated emergency recovery efforts,
+                escalating matters requiring advanced solutions or guidance in virtualization.</li>
+            <li>Conducted highly complex and technical special assignments, devising alternative strategies to
+                accomplish specific objectives.</li>
         </ul>
 
         <h3>Data Center Technician | AMAZON WEB SERVICES (AWS), Sterling, VA | December 2017 – June 2018</h3>
         <ul>
-            <li>Performed preventative maintenance on equipment and data network devices within Amazon S3, managing tight spaces, cables, and security enhancements, participating in building projects, and utility checks for optimal functionality.</li>
-            <li>Monitored the operation of all network processes, collaborating directly with the engineering department to resolve complex problems and distributed computing tasks as needed, while implementing operational excellence and driving process improvement initiatives.</li>
-            <li>Demonstrated proficient troubleshooting skills and extensive working knowledge of Linux and Windows Operating Systems in x86 or x64 systems, including remotely accessing cloud servers to diagnose and resolve critical or escalated technical issues affecting equipment.</li>
-            <li>Provided real-time support to clients and colleagues, promptly troubleshooting problems as they arose, and imparting knowledge to other data center personnel on effectively troubleshooting hardware, software, and automation scripts to ensure the smooth execution of routine tasks.</li>
+            <li>Performed preventative maintenance on equipment and data network devices within Amazon S3, managing
+                tight spaces, cables, and security enhancements, participating in building projects, and utility checks
+                for optimal functionality.</li>
+            <li>Monitored the operation of all network processes, collaborating directly with the engineering department
+                to resolve complex problems and distributed computing tasks as needed, while implementing operational
+                excellence and driving process improvement initiatives.</li>
+            <li>Demonstrated proficient troubleshooting skills and extensive working knowledge of Linux and Windows
+                Operating Systems in x86 or x64 systems, including remotely accessing cloud servers to diagnose and
+                resolve critical or escalated technical issues affecting equipment.</li>
+            <li>Provided real-time support to clients and colleagues, promptly troubleshooting problems as they arose,
+                and imparting knowledge to other data center personnel on effectively troubleshooting hardware,
+                software, and automation scripts to ensure the smooth execution of routine tasks.</li>
         </ul>
 
         <h3>Hardware Build Technician | GREYSTONE IT, Warrenton, VA | September 2016 – December 2017</h3>
         <ul>
-            <li>Managed operational activities to ensure efficient customer support, promptly resolving issues and providing immediate solutions.</li>
-            <li>Evaluated technology against established standards and recommended solutions to guarantee compatibility with client machines.</li>
-            <li>Implemented the ServiceNow ticketing system to address client inquiries effectively, collaborating directly with engineers to test and troubleshoot System Center Configuration Manager (SSCM).</li>
-            <li>Utilized MaaS360 Mobile Device Management to configure client iPad and LG tablets for optimal performance.</li>
+            <li>Managed operational activities to ensure efficient customer support, promptly resolving issues and
+                providing immediate solutions.</li>
+            <li>Evaluated technology against established standards and recommended solutions to guarantee compatibility
+                with client machines.</li>
+            <li>Implemented the ServiceNow ticketing system to address client inquiries effectively, collaborating
+                directly with engineers to test and troubleshoot System Center Configuration Manager (SSCM).</li>
+            <li>Utilized MaaS360 Mobile Device Management to configure client iPad and LG tablets for optimal
+                performance.</li>
             <li>Oversaw the deployment of Linux or Microsoft computers at various Greystone locations as required.</li>
         </ul>
 
-        <h3>General Store Manager/Lead Computer Technician | ROCKIT REPAIRS, Fredericksburg, VA | August 2013 – September 2016</h3>
+        <h3>General Store Manager/Lead Computer Technician | ROCKIT REPAIRS, Fredericksburg, VA | August 2013 –
+            September 2016</h3>
         <ul>
-            <li>Led business operations, managing workforce dynamics, devising solutions for intricate corporate issues, leveraging data analysis and process enhancement to drive performance advancements, and establishing policies to achieve objectives.</li>
-            <li>Demonstrated proficiency in administering collaborative customer care services, meticulously addressing technical issues such as antivirus or malware program installations, hard drive reformatting, operating system installations or reinstalls, hardware replacements, and networking operations.</li>
+            <li>Led business operations, managing workforce dynamics, devising solutions for intricate corporate issues,
+                leveraging data analysis and process enhancement to drive performance advancements, and establishing
+                policies to achieve objectives.</li>
+            <li>Demonstrated proficiency in administering collaborative customer care services, meticulously addressing
+                technical issues such as antivirus or malware program installations, hard drive reformatting, operating
+                system installations or reinstalls, hardware replacements, and networking operations.</li>
         </ul>
     </section>
 
@@ -101,4 +177,5 @@
         </ul>
     </section>
 </body>
+
 </html>
