Underlined tech skills and competencies

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Wade Chewning</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://kit.fontawesome.com/a033fd16bd.js" crossorigin="anonymous"></script>
 
 
@@ -33,36 +33,35 @@
     <section>
         <div class="section-title">Technical Skills & Core Competencies</div>
         <ul>
-            <li>Cloud Computing Solutions: Extensive experience in designing, deploying, and managing cloud
+            <li><span class="underline">Cloud Computing Solutions:</span> Extensive experience in designing, deploying, and managing cloud
                 infrastructure with a primary focus on Azure, as well as proficiency in AWS and GCP.</li>
-            <li>Distributed Systems: Expertise in building and managing distributed systems and applications.</li>
-            <li>Cloud Architecture: Designing scalable, secure, and cost-effective cloud solutions.</li>
-            <li>DevOps Practices: Proficiency in CI/CD pipelines, infrastructure as code (IaC), and automated
+            <li><span class="underline">Distributed Systems:</span> Expertise in building and managing distributed systems and applications.</li>
+            <li><span class="underline">Cloud Architecture:</span> Designing scalable, secure, and cost-effective cloud solutions.</li>
+            <li><span class="underline">DevOps Practices:</span> Proficiency in CI/CD pipelines, infrastructure as code (IaC), and automated
                 deployments using tools like Azure DevOps, Terraform, and Jenkins.</li>
-            <li>Containerization & Orchestration: Experience with Docker and Kubernetes for container management and
+            <li><span class="underline">Containerization & Orchestration:</span> Experience with Docker and Kubernetes for container management and
                 orchestration.</li>
-            <li>Security & Compliance: Ensuring cloud security best practices and compliance with industry standards.
-            </li>
-            <li>Networking: Knowledge of cloud networking, VPC, VPN, DNS, load balancing, and network security.</li>
-            <li>Database Management: Experience with cloud-based databases such as Azure SQL, Amazon RDS, and Google
+            <li><span class="underline">Security & Compliance:</span> Ensuring cloud security best practices and compliance with industry standards.</li>
+            <li><span class="underline">Networking:</span> Knowledge of cloud networking, VPC, VPN, DNS, load balancing, and network security.</li>
+            <li><span class="underline">Database Management:</span> Experience with cloud-based databases such as Azure SQL, Amazon RDS, and Google
                 Cloud SQL.</li>
-            <li>Monitoring & Logging: Implementing and managing monitoring, logging, and alerting solutions using tools
+            <li><span class="underline">Monitoring & Logging:</span> Implementing and managing monitoring, logging, and alerting solutions using tools
                 like Azure Monitor, AWS CloudWatch, and Google Stackdriver.</li>
-            <li>Scripting & Automation: Proficiency in scripting languages like PowerShell, Bash, and Python for
+            <li><span class="underline">Scripting & Automation:</span> Proficiency in scripting languages like PowerShell, Bash, and Python for
                 automation and task management.</li>
-            <li>System Administration: Managing and maintaining various operating systems including Microsoft Windows,
+            <li><span class="underline">System Administration:</span> Managing and maintaining various operating systems including Microsoft Windows,
                 Mac OS, and Linux (Ubuntu, Mint, Fedora).</li>
-            <li>Technical Support & Troubleshooting: Providing high-level technical support and troubleshooting for
+            <li><span class="underline">Technical Support & Troubleshooting:</span> Providing high-level technical support and troubleshooting for
                 hardware and software issues.</li>
-            <li>Project Management: Strong skills in strategic and analytical planning, managing cloud projects from
+            <li><span class="underline">Project Management:</span> Strong skills in strategic and analytical planning, managing cloud projects from
                 conception to deployment.</li>
-            <li>Exceptional Communication Skills: Excellent communication and customer service abilities to interact
+            <li><span class="underline">Exceptional Communication Skills:</span> Excellent communication and customer service abilities to interact
                 with stakeholders and team members effectively.</li>
-            <li>Technological Solutions: Creating and implementing innovative technological solutions to meet business
+            <li><span class="underline">Technological Solutions:</span> Creating and implementing innovative technological solutions to meet business
                 requirements.</li>
-            <li>Data Analysis & Management: Intensive data analysis, management, and application design.</li>
-            <li>Hardware Support: Knowledge in supporting and maintaining IT hardware.</li>
-            <li>Networking Protocols: Understanding of network cabling, HTTP, DNS, and TLS.</li>
+            <li><span class="underline">Data Analysis & Management:</span> Intensive data analysis, management, and application design.</li>
+            <li><span class="underline">Hardware Support:</span> Knowledge in supporting and maintaining IT hardware.</li>
+            <li><span class="underline">Networking Protocols:</span> Understanding of network cabling, HTTP, DNS, and TLS.</li>
 
             <!--- <li>Information & Technology</li>
             <li>Assurance Team Management</li>
