--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <a href="https://https://github.com/NeverRetail" i class="fa-brands fa-github fa-2xl"
             style="color: white;"></i></a>
-        <a href="https://www.linkedin.com/in/wade-chewning-8b8a0b88/" i class="fa-brands fa-linkedin fa-2xl"
+        <a href="https://www.linkedin.com/in/wade-chewning" i class="fa-brands fa-linkedin fa-2xl"
             style="color: white;"></i></a>
         <a href="" i class="fa-solid fa-blog fa-2xl" style="color: white;"></i></a>
         <!-- <a href="www.github.com" i class="fa-brands fa-youtube fa-2xl" style="color: white;"></i></a> -->
