updated blog link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             style="color: white;"></i></a>
         <a href="https://www.linkedin.com/in/wade-chewning" i class="fa-brands fa-linkedin fa-2xl"
             style="color: white;"></i></a>
-        <a href="" i class="fa-solid fa-blog fa-2xl" style="color: white;"></i></a>
+        <a href="https://nevertech.net/" i class="fa-solid fa-blog fa-2xl" style="color: white;"></i></a>
         <!-- <a href="www.github.com" i class="fa-brands fa-youtube fa-2xl" style="color: white;"></i></a> -->
     </header>
 
