changed last name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume - Wade Chewning</title>
+    <title>Resume - Wade Wilson</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://kit.fontawesome.com/a033fd16bd.js" crossorigin="anonymous"></script>
 
@@ -13,12 +13,12 @@
 
 <body>
     <header>
-        <h1>Wade Chewning</h1>
-        <p>Washington, DC, 20036 | (540) 903-3108 | chewningwade@gmail.com</p>
+        <h1>Wade Wilson</h1>
+        <p>Washington, DC, 20036 | (540) 903-3108 | </p>
 
         <a href="https://https://github.com/NeverRetail" i class="fa-brands fa-github fa-2xl"
             style="color: white;"></i></a>
-        <a href="https://www.linkedin.com/in/wade-chewning" i class="fa-brands fa-linkedin fa-2xl"
+        <a href="https://www.linkedin.com/in/wade-Wilson" i class="fa-brands fa-linkedin fa-2xl"
             style="color: white;"></i></a>
         <a href="https://nevertech.net/" i class="fa-solid fa-blog fa-2xl" style="color: white;"></i></a>
         <!-- <a href="www.github.com" i class="fa-brands fa-youtube fa-2xl" style="color: white;"></i></a> -->
