added college and certifications

--- a/index.html
+++ b/index.html
@@ -164,15 +164,16 @@
 
     <section>
         <div class="section-title">Education</div>
-        <p>Associate of Arts and Sciences | Germanna Community College | Graduated | 2016 | Graduated Cum Laude</p>
+        <p>Bachelor of Science, Cloud Computing | Western Governors University | Graduated | 2025</p>
     </section>
 
     <section>
         <div class="section-title">Certifications</div>
         <ul>
-            <li>CompTIA | A+</li>
-            <li>SQL Server DBA | Udemy</li>
+            <li>CompTIA A+ | Network+ | Security+</li>
+            <li>AWS | Certified Cloud Practicioner</li>
             <li>Microsoft | AZ-900 Azure Fundamentals</li>
+            <li>ITIL 4 Foundation Certificate in IT Service Management</li>
         </ul>
     </section>
 </body>
