--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>Wade Wilson</h1>
-        <p>Washington, DC, 20036 | (540) 903-3108 | </p>
+        <p>Washington, DC, 20036 | (540) 903-3108 |<a href="mailto:wade@wade-wilson.com">wade@wade-wilson.com</a> </p>
 
         <a href="https://https://github.com/NeverRetail" i class="fa-brands fa-github fa-2xl"
             style="color: white;"></i></a>
