--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
 
     <section>
         <div class="section-title">Education</div>
-        <p>Bachelor of Science, Cloud Computing | Western Governors University | Graduated | 2025</p>
+        <p class="college">Bachelor of Science, Cloud Computing | Western Governors University | Graduated | 2025</p>
     </section>
 
     <section>
         <div class="section-title">Certifications</div>
-        <ul>
-            <li>CompTIA A+ | Network+ | Security+</li>
+        <ul class="certs">
+            <li>CompTIA | A+ | Network+ | Security+</li>
             <li>AWS | Certified Cloud Practicioner</li>
             <li>Microsoft | AZ-900 Azure Fundamentals</li>
             <li>ITIL 4 Foundation Certificate in IT Service Management</li>
