--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <section>
         <div class="section-title">Professional Experience</div>
 
-        <h3>Systems Engineer | TSI VA (EJF Capital LLC), Arlington, VA | March 2023 – Present</h3>
+        <h3>Cloud Engineer | TSI VA (EJF Capital LLC), Arlington, VA | March 2023 – Present</h3>
         <ul>
             <li>Lead the development of PowerShell scripts aimed at streamlining daily operations, such as automating
                 Sysmon updates for end-users, dispatching reboot notifications, and conducting regular checks on user
