--- a/index.html
+++ b/index.html
@@ -170,10 +170,11 @@
     <section>
         <div class="section-title">Certifications</div>
         <ul class="certs">
-            <li>CompTIA | A+ | Network+ | Security+</li>
-            <li>AWS | Certified Cloud Practicioner</li>
-            <li>Microsoft | AZ-900 Azure Fundamentals</li>
+            <li>CompTIA A+ | Network+ | Security+ | Cloud+</li>
+            <li>AWS Certified Cloud practitioner | Solutions Architect - Associate </li>
+            <li>Microsoft AZ-900 Azure Fundamentals</li>
             <li>ITIL 4 Foundation Certificate in IT Service Management</li>
+            <li>LPI Linux Essentials</li>
         </ul>
     </section>
 </body>
