--- a/index.html
+++ b/index.html
@@ -26,42 +26,68 @@
 
     <section>
         <div class="section-title">Summary</div>
-        <p><p>Dynamic Cloud Engineer with expertise in cloud architecture, systems administration, and automation. Proficient in designing and managing scalable cloud solutions primarily on Azure, with additional experience in AWS and GCP. Skilled in PowerShell scripting and automation, ensuring compliance with industry standards, and implementing robust security measures to safeguard sensitive data. Experienced in optimizing cloud infrastructure for maximum uptime and efficiency, and in deploying and managing containerized applications using Docker and Kubernetes. Strong background in troubleshooting and providing support for both Windows and Linux environments. Committed to delivering exceptional customer service, leading teams, and driving performance improvement initiatives through innovative cloud-based solutions.</p>
-    </p>
+        <p>
+        <p>Dynamic Cloud Engineer with a strong foundation in systems administration, infrastructure automation, and
+            cloud platform management. Proficient in PowerShell, Bash, and Python scripting to streamline workflows,
+            enforce CIS security benchmarks, and drive infrastructure-as-code practices. Experienced in securing and
+            maintaining both Windows and Linux environments, including hardening, patching, and containerization with
+            Docker. Adept at designing and deploying cloud-native solutions using AWS and Azure, with a focus on
+            operational efficiency, scalability, and security. Known for delivering high-impact solutions, providing
+            responsive technical support, and continuously optimizing system performance in fast-paced IT environments.
+        </p>
+        </p>
     </section>
 
     <section>
         <div class="section-title">Technical Skills & Core Competencies</div>
         <ul>
-            <li><span class="underline">Cloud Computing Solutions:</span> Extensive experience in designing, deploying, and managing cloud
+            <li><span class="underline">Cloud Computing Solutions:</span> Extensive experience in designing, deploying,
+                and managing cloud
                 infrastructure with a primary focus on Azure, as well as proficiency in AWS and GCP.</li>
-            <li><span class="underline">Distributed Systems:</span> Expertise in building and managing distributed systems and applications.</li>
-            <li><span class="underline">Cloud Architecture:</span> Designing scalable, secure, and cost-effective cloud solutions.</li>
-            <li><span class="underline">DevOps Practices:</span> Proficiency in CI/CD pipelines, infrastructure as code (IaC), and automated
+            <li><span class="underline">Distributed Systems:</span> Expertise in building and managing distributed
+                systems and applications.</li>
+            <li><span class="underline">Cloud Architecture:</span> Designing scalable, secure, and cost-effective cloud
+                solutions.</li>
+            <li><span class="underline">DevOps Practices:</span> Proficiency in CI/CD pipelines, infrastructure as code
+                (IaC), and automated
                 deployments using tools like Azure DevOps, Terraform, and Jenkins.</li>
-            <li><span class="underline">Containerization & Orchestration:</span> Experience with Docker and Kubernetes for container management and
+            <li><span class="underline">Containerization & Orchestration:</span> Experience with Docker and Kubernetes
+                for container management and
                 orchestration.</li>
-            <li><span class="underline">Security & Compliance:</span> Ensuring cloud security best practices and compliance with industry standards.</li>
-            <li><span class="underline">Networking:</span> Knowledge of cloud networking, VPC, VPN, DNS, load balancing, and network security.</li>
-            <li><span class="underline">Database Management:</span> Experience with cloud-based databases such as Azure SQL, Amazon RDS, and Google
+            <li><span class="underline">Security & Compliance:</span> Ensuring cloud security best practices and
+                compliance with industry standards.</li>
+            <li><span class="underline">Networking:</span> Knowledge of cloud networking, VPC, VPN, DNS, load balancing,
+                and network security.</li>
+            <li><span class="underline">Database Management:</span> Experience with cloud-based databases such as Azure
+                SQL, Amazon RDS, and Google
                 Cloud SQL.</li>
-            <li><span class="underline">Monitoring & Logging:</span> Implementing and managing monitoring, logging, and alerting solutions using tools
+            <li><span class="underline">Monitoring & Logging:</span> Implementing and managing monitoring, logging, and
+                alerting solutions using tools
                 like Azure Monitor, AWS CloudWatch, and Google Stackdriver.</li>
-            <li><span class="underline">Scripting & Automation:</span> Proficiency in scripting languages like PowerShell, Bash, and Python for
+            <li><span class="underline">Scripting & Automation:</span> Proficiency in scripting languages like
+                PowerShell, Bash, and Python for
                 automation and task management.</li>
-            <li><span class="underline">System Administration:</span> Managing and maintaining various operating systems including Microsoft Windows,
+            <li><span class="underline">System Administration:</span> Managing and maintaining various operating systems
+                including Microsoft Windows,
                 Mac OS, and Linux (Ubuntu, Mint, Fedora).</li>
-            <li><span class="underline">Technical Support & Troubleshooting:</span> Providing high-level technical support and troubleshooting for
+            <li><span class="underline">Technical Support & Troubleshooting:</span> Providing high-level technical
+                support and troubleshooting for
                 hardware and software issues.</li>
-            <li><span class="underline">Project Management:</span> Strong skills in strategic and analytical planning, managing cloud projects from
+            <li><span class="underline">Project Management:</span> Strong skills in strategic and analytical planning,
+                managing cloud projects from
                 conception to deployment.</li>
-            <li><span class="underline">Exceptional Communication Skills:</span> Excellent communication and customer service abilities to interact
+            <li><span class="underline">Exceptional Communication Skills:</span> Excellent communication and customer
+                service abilities to interact
                 with stakeholders and team members effectively.</li>
-            <li><span class="underline">Technological Solutions:</span> Creating and implementing innovative technological solutions to meet business
+            <li><span class="underline">Technological Solutions:</span> Creating and implementing innovative
+                technological solutions to meet business
                 requirements.</li>
-            <li><span class="underline">Data Analysis & Management:</span> Intensive data analysis, management, and application design.</li>
-            <li><span class="underline">Hardware Support:</span> Knowledge in supporting and maintaining IT hardware.</li>
-            <li><span class="underline">Networking Protocols:</span> Understanding of network cabling, HTTP, DNS, and TLS.</li>
+            <li><span class="underline">Data Analysis & Management:</span> Intensive data analysis, management, and
+                application design.</li>
+            <li><span class="underline">Hardware Support:</span> Knowledge in supporting and maintaining IT hardware.
+            </li>
+            <li><span class="underline">Networking Protocols:</span> Understanding of network cabling, HTTP, DNS, and
+                TLS.</li>
 
             <!--- <li>Information & Technology</li>
             <li>Assurance Team Management</li>
@@ -89,19 +115,22 @@
 
         <h3>Cloud Engineer | TSI VA (EJF Capital LLC), Arlington, VA | March 2023 – Present</h3>
         <ul>
-            <li>Lead the development of PowerShell scripts aimed at streamlining daily operations, such as automating
-                Sysmon updates for end-users, dispatching reboot notifications, and conducting regular checks on user
-                memberships within security and distribution groups.</li>
-            <li>Facilitate collaboration with Risk Assessment vendors regularly, leading to a systematic reduction in
-                the company's risk score week after week.</li>
-            <li>Ensure consistent adherence to patch management protocols, keeping both end-users and servers updated
-                with the latest patches in accordance with Microsoft's "Patch Tuesday" schedule, whether on a weekly or
-                monthly basis.</li>
-            <li>Take measures to manage the company's CIS8 compliance, ensuring regulatory adherence through necessary
-                adjustments and modifications.</li>
-            <li>Design and implement comprehensive email rules and policies within the admin exchange center and
-                Mimecast, effectively safeguarding sensitive internal data against external breaches and notably
-                decreasing the volume of spam received by users.</li>
+            <li>Engineered and deployed a production-grade Cyberhaven alerting system on Ubuntu Server, leveraging
+                Postfix, Bash, and Python to deliver real-time email alerts to the CTO, automating threat visibility and
+                reducing reliance on manual portal checks by over 90%.</li>
+            <li>Provisioned and maintained a self-hosted OpenVAS/Greenbone vulnerability scanning server with automated
+                cron jobs for continuous updates, enhancing security posture across cloud-linked infrastructure with
+                weekly scan insights.</li>
+            <li>Administered Linux-based infrastructure, implementing UFW firewall rules, SSH key management, and
+                automated patching via Unattended Upgrades, aligning with cloud security best practices and minimizing
+                manual intervention.</li>
+            <li>Deployed and managed Docker Engine across multiple Ubuntu cloud instances to support containerized
+                development pipelines, improving deployment consistency and reducing build failures by 30%.</li>
+            <li>Developed scalable Python automation tools to scrape and archive content from internal EJF websites,
+                exporting to HTML and PDF formats for long-term cloud storage and audit compliance.</li>
+            <li>Automated DNS configuration backups using PowerShell, scripting a daily task to extract and preserve
+                external DNS records, ensuring cloud DNS continuity and rollback readiness.</li>
+
         </ul>
 
         <h3>Facility Operations Center Support Engineer II | AMAZON WEB SERVICES (AWS), Sterling, VA | June 2018 – April
